<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"

                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/detail_imagen"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/labelNombre"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:labelFor="@+id/textViewNombre"
                            android:text="@string/nombre" />

                        <TextView
                            android:id="@+id/textViewNombre"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:text="ACTIVITY DETAIL" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:labelFor="@+id/weight"
                            android:text="@string/weight" />

                        <TextView
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:text="@string/weight" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_height"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:labelFor="@+id/weight"
                            android:text="@string/height" />

                        <TextView
                            android:id="@+id/height"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:text="@string/height" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/label_types"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:labelFor="@+id/types"
                            android:text="@string/types" />

                        <TextView
                            android:id="@+id/types"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_margin="5dp"
                            android:text="@string/types" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            >


        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>